# project-qa-server

./: .dockerignore  .env.compose.example  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_project_members.py  0003_buildings.py  0004_building_control.py  0005_response_building.py  0006_member_source.py
app/: main.py
app/auth/: __init__.py  azure.py  dependencies.py  dev.py  provider.py
app/core/: config.py  db.py  exceptions.py  logging.py  wait_for_db.py
app/models/: __init__.py  base.py  building.py  building_control.py  event_log.py  form.py  hrb.py  project.py  project_member.py  response.py  stage.py  user.py
app/repositories/: building_control.py  buildings.py  event_logs.py  forms.py  hrb.py  project_members.py  projects.py  responses.py  stages.py  users.py
app/routers/: __init__.py  admin.py  building_control.py  buildings.py  event_logs.py  forms.py  hrb.py  overview.py  projects.py  (+4 more)
scripts/: backfill_answer_casing.py  building-control-scan.csv  grant_role.py  migrate_legacy.py  run_building_control_scan.py  run_cmap_sync.py  run_resourcing_sync.py  scan_building_control.py  start-db.ps1  sync_cmap_stages.py
seeds/: __init__.py  forms.py  run.py  sample.py  stages.py
tests/: test_auth_config.py  test_authz.py  test_azure_identity.py  test_building_control.py  test_cmap_sync.py  test_hrb_carry_forward.py  test_migrate_values.py  test_overview_analysis.py  test_qa_folders.py  test_resourcing_sync.py  test_scoring.py
(+32 files in other folders)
