[project]
name = "projectqa-api"
version = "0.1.0"
description = "HTS Project QA — standalone FastAPI backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-jose[cryptography]>=3.3",
    "httpx>=0.27",
    "structlog>=24.1",
    "fastapi-mail>=1.4",
    "apscheduler>=3.10",
    "email-validator>=2.1",
    "greenlet>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "aiosqlite>=0.20",
    "mypy>=1.10",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
exclude = ["alembic/"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["alembic"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# UP042: we intentionally use (str, Enum) for JSON-friendly string enums
# (Pydantic v2 serialises the value; SQLAlchemy stores the member name).
ignore = ["UP042"]
